# SynOmics

./: .readthedocs.yaml  BUILDING_DOCS.md  README.rst  pyproject.toml  synomics.py
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  usage.rst
docs/source/modules/: evaluation.rst  preprocessing.rst  synthesizer.rst
