[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "synomics"
authors = [
    {name = "The-Chuong Trinh"},
    {name = "Guido Ugguzoni"},
    {name = "Jean-Baptiste Woillard"},
    {name = "Christophe Battail"}
]
dynamic = ["version", "description"]
