[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "synomics"
authors = [
    {name = "The-Chuong Trinh", email = "trinh@synomics.org"},
    {name = "Guido Ugguzoni"},
    {name = "Jean-Baptiste Woillard"},
    {name = "Christophe Battail"}
]
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

